rucherDetailOl.js correction bug export pdf et png si appel ign

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -327,6 +327,7 @@ personne=Personne
 personnenonsupprimeerefrrucher=Cette personne ne peut être supprimée, elle est référencée dans un rucher
 supprimercettepersonne=Supprimer cette personne ?
 Pasderucher=Pas de rucher avec cette personne pour contact
+contactRuchers=Contact pour les Ruchers
 
 #################### recolte ########################################
 
@@ -495,6 +496,7 @@ exportGPX=Export GPX
 exportKML=Export KML
 parcoursRecalcul=Re-calculer le parcours des ruches
 cercles=Cercles
+dessinEnregistre = Dessin enregistré
 
 # rucher/ruchersListeOsm.html
 rucherscarteosm=Ruchers. Carte OpenStreetMap
