--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -327,6 +327,7 @@ personne=People
 personnenonsupprimeerefrrucher=This person cannot be deleted, she is used on an apiary
 supprimercettepersonne=Delete this person?
 Pasderucher=No apiary has this person as contact
+contactRuchers=Contact for the Apiaries
 
 #################### recolte ########################################
 
@@ -495,6 +496,7 @@ exportGPX=GPX export
 exportKML=KML export
 parcoursRecalcul=Re-calculate hive route
 cercles=Circles
+dessinEnregistre = Drawing saved
 
 # rucher/ruchersListeOsm.html
 rucherscarteosm=Apiaries. OpenStreetMap
