recolte : Rucher(s) et séparation des ruchers ave ", "

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -340,6 +340,7 @@ ProductionEssaimRecolte=Production Essaim/Récolte
 statistiquesProd=Statistiques production annuelle
 ajouterRecolte=Ajouter une récolte
 Recoltes=Récoltes
+RucherS=Rucher(s)
 
 # recolte/recolteChoixHausses.html
 ajoutretraithaussesrecolte=Ajout/Retrait de hausses
