--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -340,6 +340,7 @@ ProductionEssaimRecolte=Swarm/Harvest Production
 statistiquesProd=Annual production statistics
 ajouterRecolte=Add a harvest
 Recoltes=Harvests
+RucherS=Apiary(ies)
 
 # recolte/recolteChoixHausses.html
 ajoutretraithaussesrecolte=Addition/Removal of supers
