essaimDetail.html ajout "Pas de récolte"

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -245,6 +245,7 @@ actionSucre=Sucre
 traitement=Traitement varroa
 Essaims=Essaims
 essaim=Essaim
+PasDeRecolte=Pas de récolte
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
