--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -245,6 +245,7 @@ actionSucre=Sugar
 traitement=Varroa treatment
 Essaims=Swarms
 essaim=Swarm
+PasDeRecolte=No harvest
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
