essaimGraphe ajout actif/inactif dans popup

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -175,6 +175,7 @@ EcartType= Écart type
 # essaim/essaimGraphe.html
 MielKg=Miel(kg)
 MielDescKg=Miel descendance(kg) 
+Inactif=Inactif
 
 # essaim/essaimsListe.html
 statistiquesproduction=Statistiques production
