--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -175,6 +175,7 @@ EcartType= Standard deviation
 # essaim/essaimGraphe.html
 MielKg=Honey(kg)
 MielDescKg=Descendants honey(kg) 
+Inactif=Inactive
 
 # essaim/essaimsListe.html
 statistiquesproduction=Production satistics
