essaimStatistiques.html ajout lien retour liste essaims

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -165,6 +165,7 @@ Moyen=Moyen
 Duree=Durée
 aideStatistiqueEssaim=Durée d'existence de l'essaim en jours<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total sur la durée d'existence<br/>- Récolte Max et Min<br/>- Moyen par année d'existence
 masquerInactif=Masquer les inactifs
+Production=Production
 
 # essaim/essaimsStatAges.html
 Moyenne=Moyenne
@@ -335,7 +336,6 @@ contactRuchers=Contact pour les Ruchers
 
 # recolte/recoltesStatEssaim.html
 Totalpage=Total page
-ProductionEssaim=Production Essaims
 ProductionEssaimRecolte=Production Essaim/Récolte
 
 # recolte/recoltesListe.html
