--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -165,6 +165,7 @@ Moyen=Average
 Duree=Duration
 aideStatistiqueEssaim=Swarm duration of existence (days)<br/>Weight of honey produced, Max, Min et Average (kg) :<br/>- Total over duration of existence<br/>- Harvest Max and Min<br/>- Average by year of existence
 masquerInactif=Hide inactives
+Production=Production
 
 # essaim/essaimsStatAges.html
 Moyenne=Mean
@@ -335,7 +336,6 @@ contactRuchers=Contact for the Apiaries
 
 # recolte/recoltesStatEssaim.html
 Totalpage=Total page
-ProductionEssaim=Swarm Production
 ProductionEssaimRecolte=Swarm/Harvest Production
 
 # recolte/recoltesListe.html
