liste événments avec hausse de récolte pour mémo (en commentaire)

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -263,6 +263,7 @@ evenementCree=Créer un événement
 evenements=Événements
 valeur=Valeur
 evenement=Événement
+# Hausserecolte=Hausse récolte
 
 # evenement/evenementSucreListe.html
 evenementssucre=Événements sucre
