--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -263,6 +263,7 @@ evenementCree=Create an event
 evenements=Events
 valeur=Value
 evenement=Event
+# Hausserecolte=Harvest super
 
 # evenement/evenementSucreListe.html
 evenementssucre=Sugar events
