rucherStatistiques.html ajout lien retour vers liste des ruchers

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -447,7 +447,7 @@ ajouterRucheType=Ajouter un type de ruche
 
 # rucher/rucherStatistiques.html
 aideStatistiqueRucher=Récolte : nombre de récoltes<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total pour le rucher<br/>- Récolte Max et Min<br/>- Moyen par récolte
-ProductionRuchersRecolte=Production Ruchers par récolte
+ProductionRecolte=Production par récolte
 
 # rucher/rucherDetail.html
 Pasderuche=Pas de ruche dans ce rucher
