--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -447,7 +447,7 @@ ajouterRucheType=Add a hive type
 
 # rucher/rucherStatistiques.html
 aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced, Max, Min and Average (kg) :<br/>- Total for apiary<br/>- Harvest Max and Min<br/>- Average by harvest
-ProductionRuchersRecolte=Production Apiaries per harvest
+ProductionRecolte=Production per harvest
 
 # rucher/rucherDetail.html
 Pasderuche=No hive in this apiary
