recoltesStatEssaim ajout lien retour, recoltesStatProd internationalis.

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -337,7 +337,7 @@ contactRuchers=Contact pour les Ruchers
 
 # recolte/recoltesStatEssaim.html
 Totalpage=Total page
-ProductionEssaimRecolte=Production Essaim/Récolte
+ProductionEssaims=Production Essaims/
 
 # recolte/recoltesListe.html
 statistiquesProd=Statistiques production annuelle
@@ -377,6 +377,11 @@ haussesRecolte=Hausses de la récolte
 # recolte/recoltesStat.html
 productionessaim=Production par essaim.
 poidsMielHausses=Poids de miel hausses
+
+# recolte/recoltesStatProd.html
+PoidsMielAnneeKg=Poids de miel par année en kg
+Pots=Pots
+HaussesEssaim=Hausses/Essaim
 
 #################### ruche ########################################
 
