--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -337,7 +337,7 @@ contactRuchers=Contact for the Apiaries
 
 # recolte/recoltesStatEssaim.html
 Totalpage=Total page
-ProductionEssaimRecolte=Swarm/Harvest Production
+ProductionEssaims=Production. Swarms/
 
 # recolte/recoltesListe.html
 statistiquesProd=Annual production statistics
@@ -377,6 +377,11 @@ haussesRecolte=Harvest supers
 # recolte/recoltesStat.html
 productionessaim=Production by swarm. 
 poidsMielHausses=Supers honey weight
+
+# recolte/recoltesStatProd.html
+PoidsMielAnneeKg=Honey weight by year in kg
+Pots=Pots
+HaussesEssaim=Supers/Swarm
 
 #################### ruche ########################################
 
