ajout doc ruches.html dans menu Admin

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -61,6 +61,7 @@ tousLes=tous les
 apiRest=API REST
 preferences=Préférences
 confirmDeploie=Voulez-vous déployer l'application à partir de ses sources sur gitlab ?
+Doc=Doc
 
 # parametresForm.html
 voirInactif=Afficher les inactifs
