--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -61,6 +61,7 @@ tousLes=all
 apiRest=REST API
 preferences=Preferences
 confirmDeploie=Do you want to deploy the application from its sources on gitlab?
+Doc=Doc
 
 # parametresForm.html
 voirInactif=Show inactives
