GpPlugin 3.1.0 et ol 6.6.1

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -497,7 +497,7 @@ distancedeparcours=Distance de parcours
 Entree=Entrée
 pleinecran=Bascule plein écran
 couchemarqueursruches=Couche des marqueurs Ruches
-aiderucherdetailignmarkers=Doubleclic sur une ruche pour afficher son détail<br/>Un clic pour la sélectionner, puis clic pour la déplacer (seulement si la case Marqueurs fixes n'est pas cochée)<br/>Clic sur fond de carte pour désélectionner
+aiderucherdetailignmarkers=Doubleclic sur une ruche pour afficher son détail<br/>Un clic pour la sélectionner, puis clic pour la déplacer (seulement si la case Marqueurs fixes n'est pas cochée)<br/>Clic sur fond de carte pour désélectionner<br/>Clic droit sur une annotation pour afficher sa description
 listeRuchesOrdonnees=Liste des ruches ordonnée suivant le parcours
 listePlusRuchesOrdonnees=Liste détaillée des ruches ordonnée suivant le parcours
 markerFixes=Marqueurs fixes
