--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -497,7 +497,7 @@ distancedeparcours=Route length
 Entree=Entrance
 pleinecran=Toggle full-screen
 couchemarqueursruches=Hive marker layer
-aiderucherdetailignmarkers=Doubleclic on a hive to show details<br/>Clic to select, then clic to move<br/>Clic on map to deselect
+aiderucherdetailignmarkers=Doubleclic on a hive to show details<br/>Clic to select, then clic to move<br/>Clic on map to deselect<br/>Right clic on an annotation to display its description
 listeRuchesOrdonnees=Hives ordered list along the route
 listePlusRuchesOrdonnees=Hives ordered detailed list along the route
 markerFixes=Fixed markers
