Bootstrap 5.0.1 -> 5.1.0, ajout nb ruches et hausses dans détail rucher

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -471,6 +471,8 @@ rucher=Rucher
 depot=Dépôt
 ajoutRuches=Ajouter des ruches
 poidsParRuches=Poids/Ruches
+listeXRuches=Liste des {0} ruche(s)
+nbXHausses=({0} hausse(s))
 
 # rucher/ruchersListe.html
 carteGg=Carte Google
