--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -471,6 +471,8 @@ rucher=Apiary
 depot=Depot
 ajoutRuches=Add hives
 poidsParRuches=Weight/Hives
+listeXRuches={0} hive(s) list
+nbXHausses=({0} super(s))
 
 # rucher/ruchersListe.html
 carteGg=Google Map
