rucherDetail.html amélioration texte nb ruches. nb hausses

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -472,7 +472,7 @@ depot=Depot
 ajoutRuches=Add hives
 poidsParRuches=Weight/Hives
 listeXRuches={0} hive(s) list
-nbXHausses=({0} super(s))
+nbXHausses={0} super(s)
 
 # rucher/ruchersListe.html
 carteGg=Google Map
