--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -472,7 +472,7 @@ depot=Dépôt
 ajoutRuches=Ajouter des ruches
 poidsParRuches=Poids/Ruches
 listeXRuches=Liste des {0} ruche(s)
-nbXHausses=({0} hausse(s))
+nbXHausses={0} hausse(s)
 
 # rucher/ruchersListe.html
 carteGg=Carte Google
