supprimé pageLength de appl.properties. marche plus avec datatables 1.11

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -57,7 +57,7 @@ infos=Infos
 cadreruche=Cadre ruche
 rucherucher=Ajout ruche
 tous=Tous
-tousLes=tous les
+Tout=Tout
 apiRest=API REST
 preferences=Préférences
 confirmDeploie=Voulez-vous déployer l'application à partir de ses sources sur gitlab ?
