formulaire de traitement de lots, ajout du retour à la liste appelante

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -204,13 +204,13 @@ proprete=Propreté
 listeEssaims=Liste des essaims
 
 # essaim/essaimSucreLotForm.html
-ajoutSucreLot=Ajout de sucre au lot d'essaims 
+ajoutSucreLot=Ajout de sucre au lot
 
 # essaim/essaimTraitementLotForm.html
-traitementLot=Traitement Varroa du lot d'essaims 
+traitementLot=Traitement Varroa du lot
 
 # essaim/essaimCommentaireLotForm.html
-commentaireLotEssaim=Ajout d'un commentaire à un lot d'essaims
+commentaireLot=Ajout d'un commentaire au lot
 
 # essaim/essaimAssociationForm.html
 echangePositionsRuches=Échanger les positions des ruches {0} et {1}
@@ -293,9 +293,6 @@ ajouterEvenement=Ajouter un événement
 typeEvenement=Type d'événement
 
 #################### hausse ########################################
-
-# hausse/hausseCommentaireLotForm.html
-commentaireLotHausses=Ajout d'un commentaire à un lot de hausses
 
 # hausse/hausseForm.html
 saisirnbcadresinfmax=Saisir le nombre de cadres < Nombre de cadres max
@@ -443,9 +440,6 @@ pesee=Pesée
 # ruche/rucheCadreForm
 cadresLe=cadres le
 evenruchercadreaide=B bâti, G gaufré, A amorcé, M Miel, P Pollen, I indéterminé, V vide, T partition, Couvain operculé O, ouvert U
-
-# ruche/rucheCommentaireLotForm.html
-commentaireLotRuche=Ajout d'un commentaire à un lot de ruches  
 
 # ruche/rucheTypesListe.html
 rucheTypes=Types de ruches
