--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -204,13 +204,13 @@ proprete=Cleanliness
 listeEssaims=Swarms list
 
 # essaim/essaimSucreLotForm.html
-ajoutSucreLot=Add sugar to the batch of swarms 
+ajoutSucreLot=Add sugar to the batch
 
 # essaim/essaimTraitementLotForm.html
 traitementLot=Batch Varroa treatment 
 
 # essaim/essaimCommentaireLotForm.html
-commentaireLotEssaim=Add a comment to the batch of swarms
+commentaireLot=Add a comment to the batch
 
 # essaim/essaimAssociationForm.html
 echangePositionsRuches=Exchange positions of hives {0} and {1}
@@ -293,9 +293,6 @@ ajouterEvenement=Add event
 typeEvenement=Event type
 
 #################### hausse ########################################
-
-# hausse/hausseCommentaireLotForm.html
-commentaireLotHausses=Add a comment to the batch of supers
 
 # hausse/hausseForm.html
 saisirnbcadresinfmax=Get number of frames < Max frame number
@@ -443,9 +440,6 @@ pesee=Weighing
 # ruche/rucheCadreForm
 cadresLe=frames on
 evenruchercadreaide=B built, G embossed, A initiated, M Honey, P Pollen, I Indeterminate, V empty, T partition, Non sealed brood O, open U
-
-# ruche/rucheCommentaireLotForm.html
-commentaireLotRuche=Add a comment to the batch of hives  
 
 # ruche/rucheTypesListe.html
 rucheTypes=Hive types
