Suppression comments. Amélioration retour form ajout/retrait hausses

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -413,10 +413,12 @@ retirerhausse=Retirer cette hausse
 retirerreordonnerHausses=Retirer Réordonner (glisser-déposer)
 
 # ruche/rucheRetraitHausseForm.html
-retraithausseXXdela=Retrait de la hausse {0} de la 
+# retraithausseXXdela=Retrait de la hausse {0} de la 
+retraitDeLaruche=Retrait de la ruche {0}
 
 # ruche/rucheHausseForm.html
-ajouthausseXXsur=Ajout de la hausse {0} sur la 
+hausseXX=Hausse {0}
+ajoutSurLaruche=Ajout sur la ruche {0}
 
 # ruche/rucheTypesListe.html
 rucheType= Type de ruche
