--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -414,9 +414,12 @@ retirerreordonnerHausses=Remove - reorder supers
 
 # ruche/rucheRetraitHausseForm.html
 retraithausseXXdela=Remove super {0} from 
+retraitDeLaruche=Remove from hive {0}
 
 # ruche/rucheHausseForm.html
-ajouthausseXXsur=Add hive {0} on 
+hausseXX=Super {0}
+ajoutSurLaruche=Add on hive {0}
+
 
 # ruche/rucheTypesListe.html
 rucheType= Hive type
