recolteChoixHausses.html améliorations messages

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -312,6 +312,9 @@ afficherrucheetc=Afficher/masquer ruche, essaim...
 Hausses=Hausses
 remplissage=Remplissage
 
+# hausses/hausseListe.html
+selecthaussestraiter=Sélectionner les hausses à traiter
+
 #################### personne ########################################
 
 # personne/personnesListe.html
@@ -348,8 +351,9 @@ RucherS=Rucher(s)
 # recolte/recolteChoixHausses.html
 ajoutretraithaussesrecolte=Ajout/Retrait de hausses
 retirerHausses=Retirer des hausses
-selecthaussestraiter=Sélectionner les hausses à traiter
 ajouterHausses=Ajouter des hausses
+selecthaussesretirer=Sélectionner les hausses à retirer
+selecthaussesajouter=Sélectionner les hausses à ajouter
 
 # recolte/recolteHausseForm.html
 plus=Plus
