--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -312,6 +312,9 @@ afficherrucheetc=Show/hide hive, swarm...
 Hausses=Supers
 remplissage=Filling
 
+# hausses/hausseListe.html
+selecthaussestraiter=Select supers to be processed
+
 #################### personne ########################################
 
 # personne/personnesListe.html
@@ -348,8 +351,9 @@ RucherS=Apiary(ies)
 # recolte/recolteChoixHausses.html
 ajoutretraithaussesrecolte=Addition/Removal of supers
 retirerHausses=Remove supers
-selecthaussestraiter=Select the supers to be processed
 ajouterHausses=Add supers
+selecthaussesretirer=Select supers to remove
+selecthaussesajouter=Select supers to add
 
 # recolte/recolteHausseForm.html
 plus=More
