Clone amélioration message

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -237,7 +237,7 @@ essaimsupprimerecolte=Cette essaim ne peut être supprimé, il est référencé 
 supprimeressaimevenements=Supprimer cet essaim et ses événements ?
 supprimeressaim=Supprimer cette essaim ?
 nexistentPasOuPasVides=n'existe(nt) pas ou ne sont pas vide(s)
-nomessaimsvirgule=Nom des essaims séparés par une virgule.\nOu avec le nom d'une ruche après le nom\nd'un essaim séparés par un point virgule
+nomessaimsvirgule=Cloner\nNom des essaims séparés par une virgule.\nOu avec le nom d'une ruche après le nom\nd'un essaim séparés par un point virgule
 graphedescendance=Graphe de descendance
 evenementCommentaireEssaim=Ajouter un événement Commentaire essaim
 evenementSucre=Ajouter un événement Sucre
@@ -303,7 +303,7 @@ hausse=Hausse
 
 # hausse/hausseDetail.html
 supprimerhausseevenement=Supprimer cette hausse et ses événements ?
-nomhaussesvirgule=Nom des hausses séparés par une virgule
+nomhaussesvirgule=Cloner\nNom des hausses séparés par une virgule
 supprimerhausse?=Supprimer cette hausse ?
 evenementRemplissage=Ajouter un événement Remplissage
 haussenonsupprimeerefrecolte=Cette hausse ne peut être supprimée, elle est référencée dans une récolte
@@ -409,6 +409,7 @@ Ruches=Ruches
 ajoutRetraitHausses=Ajouter/Retirer/Réordonner des hausses
 Pasdehausse=Pas de hausse
 evenementCommentaire=Ajouter un événement Commentaire
+nomruchesvirgule=Cloner\nNom des ruches séparés par une virgule
 
 # ruche/rucheAjoutRetrait.html
 ajoutretraithausses=Ajout/Retrait/Ordre de hausses.
@@ -463,7 +464,6 @@ depotNePeutEtreSupprime=Le dépôt ne peut être supprimé
 ruchernonsupprimerefrecolte=Ce rucher ne peut être supprimé, il est référencé dans une récolte
 supprimerruchereteven=Supprimer ce rucher et ses événements ?
 supprimercerucher?=Supprimer ce rucher ?
-nomruchesvirgule=Nom des ruches séparés par une virgule
 historique=Historique
 poidsVide=Poids
 nbCadres=Cadres
