--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -237,7 +237,7 @@ essaimsupprimerecolte=This swarm cannot be deleted, it is used in an harvest
 supprimeressaimevenements=Delete this swarm and his events?
 supprimeressaim=Delete this swarm?
 nexistentPasOuPasVides=do not exist or are not empty
-nomessaimsvirgule=Swarm names separated with a comma\nOr with the name of a hive after the name\nof a swarm separated by a semicolon 
+nomessaimsvirgule=Clone\nSwarm names separated with a comma\nOr with the name of a hive after the name\nof a swarm separated by a semicolon 
 graphedescendance=Descendants graph
 evenementCommentaireEssaim=Add a swarm comment event
 evenementSucre=Add a sugar event
@@ -303,7 +303,7 @@ hausse=Super
 
 # hausse/hausseDetail.html
 supprimerhausseevenement=Delete this super and all its events?
-nomhaussesvirgule=Super names separated with a comma
+nomhaussesvirgule=Clone\nSuper names separated with a comma
 supprimerhausse?=Delete this super?
 evenementRemplissage=Add a filling event
 haussenonsupprimeerefrecolte=This super cannot be deleted, it is used in an harvest
@@ -409,6 +409,7 @@ Ruches=Hives
 ajoutRetraitHausses=Add/Remove/Reorder supers
 Pasdehausse=No super
 evenementCommentaire=Add a comment event
+nomruchesvirgule=Clone\nHive names separated with a comma
 
 # ruche/rucheAjoutRetrait.html
 ajoutretraithausses=Add/Remove/Order supers.
@@ -464,7 +465,6 @@ depotNePeutEtreSupprime=The depot cannot be deleted
 ruchernonsupprimerefrecolte=This apiary cannot be deleted, it is used in a harvest
 supprimerruchereteven=Delete this apiary and all its events?
 supprimercerucher?=Delete this apiary?
-nomruchesvirgule=Hive names separated with a comma
 historique=History
 poidsVide=Weight
 nbCadres=Frames
