recolteDetail.html ajout message "Pas de hausse"

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -377,6 +377,7 @@ typeMiel=Honey type
 poidsMielPot=Honey weight jarred
 poidsMielMoyen=Honey average weight per hive
 haussesRecolte=Harvest supers
+PasDeHausses=No super
 
 # recolte/recoltesStat.html
 productionessaim=Production by swarm. 
