--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -377,6 +377,7 @@ typeMiel=Type de miel
 poidsMielPot=Poids de miel mis en pot
 poidsMielMoyen=Poids de miel moyen par ruche
 haussesRecolte=Hausses de la récolte
+PasDeHausses=Pas de hausse
 
 # recolte/recoltesStat.html
 productionessaim=Production par essaim.
