Suppression nb hausses des listes détaillées

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -394,6 +394,7 @@ HaussesEssaim=Hausses/Essaim
 commentaire1=Commentaire1
 commentaire2=Commentaire2
 commentaire3=Commentaire3
+PoidsTotal=Poids total
 
 # ruche/rucheDetail.html
 ruchenepeutetresupprimeerecolte=Cette ruche ne peut être supprimée, elle est référencée dans une récolte
