--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -394,6 +394,7 @@ HaussesEssaim=Supers/Swarm
 commentaire1=Comments1
 commentaire2=Comments2
 commentaire3=Comments3
+PoidsTotal=Total weight
 
 # ruche/rucheDetail.html
 ruchenepeutetresupprimeerecolte=This hive cannot be deleted, it is used in a harvest
