Carte des ruchers message "Pas de ruche" sur dbl click

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -519,6 +519,7 @@ couchemarqueursruchers=Couche des marqueurs Ruchers
 aiderucherlisteignmarkers=Doubleclic sur un rucher pour afficher son détail<br/>Un clic pour le sélectionner, puis clic pour le déplacer (seulement si la case Marqueurs fixes n'est pas cochée)<br/>Clic sur fond de carte pour désélectionner
 recentrer?=Recentrer tous les ruchers sur leurs ruches ?
 recentrer=Recentrer tous les ruchers sur leurs ruches
+PasDeRuche=Pas de ruche
 
 # rucher/rucherAjout.html
 selectruchesajout=Sélectionner les ruches à ajouter
