--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -520,6 +520,7 @@ couchemarqueursruchers=Apiary marker layer
 aiderucherlisteignmarkers=Doubleclic on an apiary to show details<br/>Clic to select, then clic to move<br/>Clic on map to deselect 
 recentrer?=Recenter all apiaries on their hives?
 recentrer=Recenter all apiaries on their hives
+PasDeRuche=No hive
 
 # rucher/rucherAjout.html
 selectruchesajout=Select hives to add
