evenementRucheAjoutListe.html ajout champ valeur = provenaance

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -276,6 +276,8 @@ evenementstraitement=Événements traitement
 
 # evenement/evenementPoidsRucheListe.html
 evenementspoidsruche=Événements poids ruche
+poidsruche=Poids ruche
+diff=Différence
 
 # evenement/evenementCadreRucheListe.html
 evenementcadreruche=Événements cadre ruche
@@ -285,8 +287,7 @@ evenementremplissagehausse=Événements remplissage hausse
 
 # evenement/evenementRucheAjoutListe.html
 evenementsrucheajout=Événements ruche ajout rucher
-poidsruche=Poids ruche
-diff=Différence
+provenance=Provenance
 
 # evenement/evenementForm.html
 ajouterEvenement=Ajouter un événement
@@ -492,6 +493,7 @@ ressource=Ressource
 # rucher/rucherHisto.html
 nb=Nb
 etat=État
+destProv=Dest/Prov
 
 # rucher/rucherDetailIgn.html
 parcours=Parcours
