--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -276,6 +276,8 @@ evenementstraitement=Treatment events
 
 # evenement/evenementPoidsRucheListe.html
 evenementspoidsruche=Hive weight events
+poidsruche=Hive weight
+diff=Difference
 
 # evenement/evenementCadreRucheListe.html
 evenementcadreruche=Hive frame events
@@ -285,8 +287,7 @@ evenementremplissagehausse=Super filling events
 
 # evenement/evenementRucheAjoutListe.html
 evenementsrucheajout=Hive add in apiary events
-poidsruche=Hive weight
-diff=Difference
+provenance=From
 
 # evenement/evenementForm.html
 ajouterEvenement=Add event
@@ -493,6 +494,7 @@ ressource=Resource
 # rucher/rucherHisto.html
 nb=Nb
 etat=State
+destProv=To/From
 
 # rucher/rucherDetailIgn.html
 parcours=Route
