rucheRucher Form test date > date dernier even ajout de la ruche

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -455,6 +455,10 @@ evenruchercadreaide=B bâti, G gaufré, A amorcé, M Miel, P Pollen, I indéterm
 rucheTypes=Types de ruches
 ajouterRucheType=Ajouter un type de ruche
 
+# rucher/rucheRucherForm
+ajouteeAuRucher=Ajoutée le {0} au rucher {1}
+doitEtreSupA=Doit être supérieure à
+
 #################### rucher ########################################
 
 # rucher/rucherStatistiques.html
