--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -456,6 +456,10 @@ evenruchercadreaide=B built, G embossed, A initiated, M Honey, P Pollen, I Indet
 rucheTypes=Hive types
 ajouterRucheType=Add a hive type
 
+# rucher/rucheRucherForm
+ajouteeAuRucher=Added on {0} to the apiary {1}
+doitEtreSupA=Must be greater than
+
 #################### rucher ########################################
 
 # rucher/rucherStatistiques.html
