rucherRuchesAjoutForm contrôle date > date dernier ajout dans un rucher

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -533,6 +533,7 @@ ajoutderuches=Ajout de ruches
 
 # rucher/rucherRuchesAjoutForm.html
 ajoutruches=Ajout dans le rucher
+dateDernierAjout=Date dernier ajout
 
 # rucher/rucherDetailOsm.html
 exportPng=Export PNG
