--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -534,6 +534,7 @@ ajoutderuches=Add hives
 
 # rucher/rucherRuchesAjoutForm.html
 ajoutruches=Addition in hive
+dateDernierAjout=Date of last addition
 
 # rucher/rucherDetailOsm.html
 exportPng=PNG export
