essaimDispersionForm ajout contrôle de date mise en rucher

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -231,6 +231,7 @@ mettreessaimdansruche=Mettre l'essaim dans cette ruche
 
 # essaim/essaimDispersionForm.html
 retourrucheaudepot=Retour de la ruche au dépôt
+rucheAjouteeAuRucher=Ruche {0} ajoutée le {1} au rucher {2}
 
 # essaim/essaimDetail.html
 essaimsupprimerecolte=Cette essaim ne peut être supprimé, il est référencé dans une récolte
