--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -231,6 +231,7 @@ mettreessaimdansruche=Put swarm in this hive
 
 # essaim/essaimDispersionForm.html
 retourrucheaudepot=Hive back to depot
+rucheAjouteeAuRucher=Hive {0} added on {1} to the apiary {2}
 
 # essaim/essaimDetail.html
 essaimsupprimerecolte=This swarm cannot be deleted, it is used in an harvest
