historique ajouté groupement des transhumances

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -496,9 +496,11 @@ listeRuchers=Liste des ruchers
 ressource=Ressource
 
 # rucher/rucherHisto.html
+# rucher/rucherHisto2.html
 nb=Nb
 etat=État
 destProv=Dest/Prov
+grouper=Grouper
 
 # rucher/rucherDetailIgn.html
 parcours=Parcours
