--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -497,9 +497,11 @@ listeRuchers=Apiaries list
 ressource=Resource
 
 # rucher/rucherHisto.html
+# rucher/rucherHisto2.html
 nb=Nb
 etat=State
 destProv=To/From
+grouper=Group
 
 # rucher/rucherDetailIgn.html
 parcours=Route
