rucherHisto.html correction bug appel historique2 au lieu de historique

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -84,6 +84,10 @@ deconnexion=Déconnexion
 # passwordResetForm.html resetPasswordForm.html
 resetPassword=Réinitialistation du mot de passe
 
+# tests.html
+HistRuchers=Historique ruchers
+EvenIncomplets=Événements incomplets
+
 # infos.html
 ruchersdepot=ruchers (avec le dépôt)
 rucheset=ruches et 
