admin/tests test historiques et test eve ajout ruche rucher incomplets

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -62,6 +62,7 @@ apiRest=API REST
 preferences=Préférences
 confirmDeploie=Voulez-vous déployer l'application à partir de ses sources sur gitlab ?
 Doc=Doc
+tests=Tests
 
 # parametresForm.html
 voirInactif=Afficher les inactifs
@@ -297,6 +298,8 @@ provenance=Provenance
 # evenement/evenementForm.html
 ajouterEvenement=Ajouter un événement
 typeEvenement=Type d'événement
+afficherrucheetc=Afficher ruche, essaim, rucher, hausse
+afficherPlus=Afficher plus
 
 #################### hausse ########################################
 
@@ -314,7 +317,6 @@ supprimerhausse?=Supprimer cette hausse ?
 evenementRemplissage=Ajouter un événement Remplissage
 haussenonsupprimeerefrecolte=Cette hausse ne peut être supprimée, elle est référencée dans une récolte
 supprimerevenement=Supprimer cet événement ?
-afficherrucheetc=Afficher/masquer ruche, essaim...
 Hausses=Hausses
 remplissage=Remplissage
 
