--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -62,6 +62,7 @@ apiRest=REST API
 preferences=Preferences
 confirmDeploie=Do you want to deploy the application from its sources on gitlab?
 Doc=Doc
+tests=Tests
 
 # parametresForm.html
 voirInactif=Show inactives
@@ -83,6 +84,10 @@ deconnexion=Disconnect
 
 # passwordResetForm.html resetPasswordForm.html
 resetPassword=Reset password
+
+# tests.html
+HistRuchers=History of apiaries
+EvenIncomplets=Incomplete events
 
 # infos.html
 ruchersdepot=apiaries (with depot)
@@ -293,6 +298,8 @@ provenance=From
 # evenement/evenementForm.html
 ajouterEvenement=Add event
 typeEvenement=Event type
+afficherrucheetc=Show hive, swarm, apiary, super
+afficherPlus=Show more
 
 #################### hausse ########################################
 
@@ -310,7 +317,6 @@ supprimerhausse?=Delete this super?
 evenementRemplissage=Add a filling event
 haussenonsupprimeerefrecolte=This super cannot be deleted, it is used in an harvest
 supprimerevenement=Delete this event?
-afficherrucheetc=Show/hide hive, swarm...
 Hausses=Supers
 remplissage=Filling
 
