Tests événements amélioration présentation

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -86,8 +86,11 @@ deconnexion=Déconnexion
 resetPassword=Réinitialistation du mot de passe
 
 # tests.html
-HistRuchers=Historique ruchers
 EvenIncomplets=Événements incomplets
+HistRuchersEveOK=Historique ruchers pas d\'événements incorrects
+HistRuchersEveKO=Historique ruchers, événements incorrects : le rucher ne contient pas cette ruche
+HistRuchersFinOK=Historique ruchers : après traitement des événements tous les ruchers sont vides
+HistRuchersFinKO=Historique ruchers : après traitement des événements ruchers non vides
 
 # infos.html
 ruchersdepot=ruchers (avec le dépôt)
