--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -87,7 +87,10 @@ resetPassword=Reset password
 
 # tests.html
 HistRuchers=History of apiaries
-EvenIncomplets=Incomplete events
+HistRuchersEveOK=Apiaries history no incorrect events 
+HistRuchersEveKO=Apiaries history incorrect events: the apiary does not contain this hive 
+HistRuchersFinOK=Apiaries history: after processing the events all the apiaries are empty
+HistRuchersFinKO=Apiaries history: after processing the events some apiaries are non empty
 
 # infos.html
 ruchersdepot=apiaries (with depot)
