tests messages.properties

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -86,7 +86,9 @@ deconnexion=Déconnexion
 resetPassword=Réinitialistation du mot de passe
 
 # tests.html
+testsEven=Tests des événements
 EvenIncomplets=Événements incomplets
+PasEvenIncomplets=Pas d\'événements incomplets
 HistRuchersEveOK=Historique ruchers pas d\'événements incorrects
 HistRuchersEveKO=Historique ruchers, événements incorrects : le rucher ne contient pas cette ruche
 HistRuchersFinOK=Historique ruchers : après traitement des événements tous les ruchers sont vides
