--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -86,7 +86,9 @@ deconnexion=Disconnect
 resetPassword=Reset password
 
 # tests.html
-HistRuchers=History of apiaries
+testsEven=Events tests
+EvenIncomplets=Incomplete events
+PasEvenIncomplets=No incomplete events
 HistRuchersEveOK=Apiaries history no incorrect events 
 HistRuchersEveKO=Apiaries history incorrect events: the apiary does not contain this hive 
 HistRuchersFinOK=Apiaries history: after processing the events all the apiaries are empty
