Tests de l'historique des hausses sur les ruches

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -90,9 +90,13 @@ testsEven=Tests des événements
 EvenIncomplets=Événements incomplets
 PasEvenIncomplets=Pas d\'événements incomplets
 HistRuchersEveOK=Historique ruchers pas d\'événements incorrects
-HistRuchersEveKO=Historique ruchers, événements incorrects : le rucher ne contient pas cette ruche
+HistRuchersEveKO=Historique ruchers : événements incorrects
 HistRuchersFinOK=Historique ruchers : après traitement des événements tous les ruchers sont vides
-HistRuchersFinKO=Historique ruchers : après traitement des événements ruchers non vides
+HistRuchersFinKO=Historique ruchers : après traitement des événements, des ruchers ne sont pas vides
+HistHaussesEveOK=Historique ajout/retrait hausses pas d\'événements incorrects
+HistHaussesEveKO=Historique ajout/retrait hausses : événements incorrects
+HistRuchesFinOK=Historique ruches : après traitement des événements tous les ruches n\'ont plus de hausse
+HistRuchesFinKO=Historique ruches : après traitement des événements, des ruches ont encore des hausses
 
 # infos.html
 ruchersdepot=ruchers (avec le dépôt)
