--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -90,9 +90,13 @@ testsEven=Events tests
 EvenIncomplets=Incomplete events
 PasEvenIncomplets=No incomplete events
 HistRuchersEveOK=Apiaries history no incorrect events 
-HistRuchersEveKO=Apiaries history incorrect events: the apiary does not contain this hive 
-HistRuchersFinOK=Apiaries history: after processing the events all the apiaries are empty
-HistRuchersFinKO=Apiaries history: after processing the events some apiaries are non empty
+HistRuchersEveKO=Apiarie history : incorrect events
+HistRuchersFinOK=Apiarie history: after processing the events all the apiaries are empty
+HistRuchersFinKO=Apiarie history: after processing the events, some apiaries are non empty
+HistHaussesEveOK=Historique ajout/retrait hausses no incorrect events
+HistHaussesEveKO=Historique ajout/retrait hausses : incorrect events
+HistRuchesFinOK=Hive history : after processing the events all the hives have no super
+HistRuchesFinKO=Hive history : after processing the events some hives still have supers
 
 # infos.html
 ruchersdepot=apiaries (with depot)
