--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -162,6 +162,7 @@ moinsdunmois=Less than a month
 moinsdunesemaine=Less than a week
 moinsdunjour=Less than a day
 datesprecises=Specific dates
+NotificationJoursAvant=Notification (days before)
 
 #################### essaim ########################################
 
