evenementNotifListe.html liste des notifications

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -272,6 +272,9 @@ dispersion=Dispersion
 
 #################### evenement ########################################
 
+# evenement/evenementNotifListe.html
+Notifications=Notifications
+
 # evenement/evenementListe.html
 listeEvenements=Liste des événements
 evenementCree=Créer un événement
