--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -272,6 +272,9 @@ dispersion=Dispersing
 
 #################### evenement ########################################
 
+# evenement/evenementNotifListe.html
+Notifications=Notifications
+
 # evenement/evenementListe.html
 listeEvenements=Events list
 evenementCree=Create an event
