liste des notifications, ajout active/inactive

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -274,6 +274,7 @@ dispersion=Dispersing
 
 # evenement/evenementNotifListe.html
 Notifications=Notifications
+JoursAvant=Days before
 
 # evenement/evenementListe.html
 listeEvenements=Events list
