--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -274,6 +274,7 @@ dispersion=Dispersion
 
 # evenement/evenementNotifListe.html
 Notifications=Notifications
+JoursAvant=Jours avant
 
 # evenement/evenementListe.html
 listeEvenements=Liste des événements
