Notifications : ajout durée et persistance

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -275,6 +275,8 @@ dispersion=Dispersion
 # evenement/evenementNotifListe.html
 Notifications=Notifications
 JoursAvant=Jours avant
+Fin=Fin
+Persistant=Persistant
 
 # evenement/evenementListe.html
 listeEvenements=Liste des événements
