--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -275,6 +275,8 @@ dispersion=Dispersing
 # evenement/evenementNotifListe.html
 Notifications=Notifications
 JoursAvant=Days before
+Fin=End
+Persistant=Lasting
 
 # evenement/evenementListe.html
 listeEvenements=Events list
